force-app/main/default/objects/Knowledge__kav/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Answer(s)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>