force-app/main/default/objects/Knowledge__kav/fields/Article_content__c.field-meta.xml
<CustomField>
    <fullName>Article_content__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Article content</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>