force-app/main/default/objects/Knowledge__kav/fields/Author_Name__c.field-meta.xml
<CustomField>
    <fullName>Author_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It will store the name of the knowledge author</description>
    <label>Author of the Article</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Knowledge</relationshipName>
    <type>Lookup</type>
</CustomField>