force-app/main/default/objects/Knowledge__kav/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <formula>HYPERLINK( LEFT($Api.Partner_Server_URL_290, FIND(&quot;/services&quot;,$Api.Partner_Server_URL_290))+&quot;lightning/r/Knowledge__kav/&quot;+Id+&quot;/view&quot;, &quot;View Article&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link</label>
    <type>Text</type>
</CustomField>