force-app/main/default/objects/Knowledge__kav/fields/Placeholder_Article__c.field-meta.xml
<CustomField>
    <fullName>Placeholder_Article__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Placeholder Article</label>
    <type>Checkbox</type>
</CustomField>