force-app/main/default/objects/Knowledge__kav/fields/Problem__c.field-meta.xml
<CustomField>
    <fullName>Problem__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Problem</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>