force-app/main/default/objects/Knowledge__kav/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Purpose</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>