force-app/main/default/objects/Knowledge__kav/fields/Related_articles__c.field-meta.xml
<CustomField>
    <fullName>Related_articles__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Related articles</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>