force-app/main/default/objects/Knowledge__kav/fields/Review_date__c.field-meta.xml
<CustomField>
    <fullName>Review_date__c</fullName>
    <description>This field will tell when the knowledge article needs to be reviewed</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Review date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>