force-app/main/default/objects/Knowledge__kav/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Solution</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>