force-app/main/default/objects/Knowledge__kav/fields/Steps_to_follow__c.field-meta.xml
<CustomField>
    <fullName>Steps_to_follow__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Steps to follow</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>