force-app/main/default/objects/Knowledge__kav/fields/Submitter_Email__c.field-meta.xml
<CustomField>
    <fullName>Submitter_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Submitter Email</label>
    <type>Email</type>
</CustomField>