force-app/main/default/objects/Knowledge__kav/fields/Version_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Version_Indicator__c</fullName>
    <formula>IF((IsLatestVersion=false), IMAGE(&quot;/resource/Icons/RedCheck.png&quot;, &quot;Old Version Warning&quot;), IMAGE(&quot;/resource/Icons/GreenCheck.png&quot;, &quot;New Version Warning&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Version Indicator</label>
    <type>Text</type>
</CustomField>