force-app/main/default/objects/Knowledge__kav/fields/Warnings__c.field-meta.xml
<CustomField>
    <fullName>Warnings__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Warnings</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>