force-app/main/default/objects/Knowledge__kav/recordTypes/Frequently_Asked_Questions.recordType-meta.xml
<RecordType>
    <fullName>Frequently_Asked_Questions</fullName>
    <active>true</active>
    <label>Frequently Asked Questions</label>
</RecordType>