force-app/main/default/objects/Knowledge__kav/listViews/draft_articles.listView-meta.xml
<ListView>
    <fullName>draft_articles</fullName>
    <columns>PUBLISH_STATUS</columns>
    <columns>TITLE</columns>
    <columns>RECORDTYPE</columns>
    <columns>Author_Name__c</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LANGUAGE</columns>
    <columns>Review_date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Draft Articles/Brouillon</label>
    <sharedTo>
        <group>Knowledge_All_Authors_Approvers</group>
    </sharedTo>
</ListView>