force-app/main/default/objects/Knowledge__kav/listViews/Placeholder_Articles_Publi.listView-meta.xml
<ListView>
    <fullName>Placeholder_Articles_Publi</fullName>
    <columns>TITLE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LANGUAGE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <filters>
        <field>Placeholder_Article__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Placeholder Articles/Publié</label>
</ListView>